--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -55,6 +55,7 @@ jobs:
           haxelib set openfl 9.1.0
           haxelib set flxanimate 1.2.0
           haxelib install hscript --quiet
+          haxelib git hxCodec https://github.com/polybiusproxy/hxcodec
           haxelib run lime config ANDROID_SDK $ANDROID_SDK_ROOT
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_ROOT
           haxelib run lime config JAVA_HOME $JAVA_HOME
