--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -56,6 +56,7 @@ jobs:
           haxelib set flxanimate 1.2.0
           haxelib install hscript --quiet
           haxelib git hxCodec https://github.com/polybiusproxy/hxcodec
+          haxelib git extension-androidtools https://github.com/majigsaw77/extension-androidtools
           haxelib run lime config ANDROID_SDK $ANDROID_SDK_ROOT
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_ROOT
           haxelib run lime config JAVA_HOME $JAVA_HOME
