--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -46,7 +46,7 @@ jobs:
           mkdir -p "%HAXELIB_ROOT%"
           haxelib setup "%HAXELIB_ROOT%"
           haxelib install hxcpp  > /dev/null
-          haxelib git lime https://github.com/Sirox228/lime --quiet
+          haxelib install lime --quiet
           haxelib install openfl 9.1.0 --quiet
           haxelib install flixel 4.11.0 --quiet
           haxelib run lime setup flixel --quiet
@@ -59,7 +59,7 @@ jobs:
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_ROOT
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
-          haxelib set lime git
+          haxelib set lime 7.9.0
           haxelib set openfl 9.1.0
           haxelib set flxanimate 1.2.0
           haxelib list
