--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -46,7 +46,7 @@ jobs:
           mkdir -p "%HAXELIB_ROOT%"
           haxelib setup "%HAXELIB_ROOT%"
           haxelib install hxcpp  > /dev/null
-          haxelib install lime --quiet
+          haxelib install lime 7.9.0 --quiet
           haxelib install openfl 9.1.0 --quiet
           haxelib install flixel 4.11.0 --quiet
           haxelib run lime setup flixel --quiet
