--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -46,13 +46,13 @@ jobs:
           mkdir -p "%HAXELIB_ROOT%"
           haxelib setup "%HAXELIB_ROOT%"
           haxelib install hxcpp  > /dev/null
-          haxelib install lime 7.9.0 --quiet
-          haxelib install openfl 9.1.0 --quiet
-          haxelib install flixel 4.11.0 --quiet
-          haxelib run lime setup flixel --quiet
-          haxelib install flxanimate 1.2.0 --quiet
-          haxelib install hxp --quiet
-          haxelib install hscript --quiet
+          haxelib install lime 7.9.0
+          haxelib install openfl 9.1.0
+          haxelib install flixel 4.11.0
+          haxelib run lime setup flixel
+          haxelib install flxanimate 1.2.0
+          haxelib install hxp
+          haxelib install hscript
           haxelib git hxCodec https://github.com/polybiusproxy/hxcodec
           haxelib git extension-androidtools https://github.com/majigsaw77/extension-androidtools
           haxelib list
@@ -69,8 +69,6 @@ jobs:
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
-          haxelib set lime 7.9.0
-          haxelib set openfl 9.1.0
           haxelib set lime 7.9.0
           haxelib set openfl 9.1.0
           haxelib set flxanimate 1.2.0
