--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,7 @@ jobs:
           haxelib --quiet install flixel-ui
           haxelib --quiet install flixel-addons
           haxelib --quiet install flxanimate 1.2.0
+          haxelib --quiet install hxp
           haxelib git linc_luajit https://github.com/MAJigsaw77/linc_luajit.git --quiet
           haxelib git hxCodec https://github.com/polybiusproxy/hxCodec --quiet
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git --quiet
