--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
           haxelib --quiet install flixel-addons
           haxelib --quiet install flxanimate 1.2.0
           haxelib --quiet install hxp
-          haxelib git linc_luajit https://github.com/MAJigsaw77/linc_luajit.git --quiet
+          haxelib git linc_luajit https://github.com/sirox228/linc_luajit_backup --quiet
           haxelib git hxCodec https://github.com/sirox228/hxCodec --quiet
           haxelib git extension-androidtools https://github.com/MAJigsaw77/extension-androidtools.git --quiet
           haxelib list
