--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Install Haxelibs
         run: |
           haxelib --quiet install lime 8.0.2
-          haxelib --quiet install openfl 9.1.0
-          haxelib --quiet install flixel
+          haxelib --quiet install openfl 9.2.2
+          haxelib --quiet install flixel 4.7.0
           haxelib --quiet --never run lime setup
           haxelib --quiet install hscript
           haxelib --quiet install flixel-ui
@@ -57,7 +57,7 @@ jobs:
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
           haxelib set lime 8.0.2
-          haxelib set openfl 9.1.0
+          haxelib set openfl 9.2.2
           haxelib set flxanimate 1.2.0
           haxelib list
         env:
